# rust_zstd

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  binary_file.bin.zst  lst.txt  run_unit_tests.sh  tmp.py  tmp.txt
fuzz/: Cargo.toml  generate_seed_inputs.py  seed_inputs.txt
fuzz/fuzz_targets/: fuzz_decode.rs
lib/: Cargo.toml
lib/src/: block.rs  frame.rs  lib.rs  parsing.rs
src/: errors.rs  lib.rs  main.rs
src/lib/: errors.rs  parsing.rs
src/zstd/: block.rs  errors.rs  frame.rs  parsing.rs
tests/: fuzz_test.rs  generate_bin_file.sh  generate_decoded_corpus.sh  integration_test.rs  parsing.rs
tests/corpus/: z000003.zst  z000004.zst  z000005.zst  z000007.zst  z000008.zst  z000009.zst  z000010.zst  z000011.zst  z000013.zst  z000020.zst  z000022.zst  z000024.zst  z000027.zst  z000028.zst  z000029.zst  z000030.zst  z000032.zst  z000034.zst  z000035.zst  z000036.zst  z000038.zst  z000039.zst  z000041.zst  z000049.zst  z000050.zst  z000051.zst  z000052.zst  z000053.zst  z000054.zst  z000055.zst  z000057.zst  z000058.zst  z000059.zst  z000060.zst  z000061.zst  z000062.zst  z000063.zst  z000064.zst  z000065.zst  z000066.zst  (+926 more)
tests/decode_corpus/: z000000.zst  z000001.zst  z000002.zst  z000006.zst  z000012.zst  z000014.zst  z000015.zst  z000016.zst  z000017.zst  z000018.zst  z000019.zst  z000021.zst  z000023.zst  z000025.zst  z000026.zst  z000031.zst  z000033.zst  z000037.zst  z000040.zst  z000042.zst  z000043.zst  z000044.zst  z000045.zst  z000046.zst  z000047.zst  z000048.zst  z000049.zst
tests/fixtures/: ex1.txt  ex1.zst  (+6 more)
zstd_lib/: Cargo.toml
(+34 files in other folders)
